--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,24 @@ out/
 
 ### VS Code ###
 .vscode/
+
+# Frontend dependencies
+/frontend/node_modules
+/frontend/.pnp
+/frontend/pnp.js
+
+# Frontend testing
+/frontend/coverage
+
+# Frontend production
+/frontend/build
+
+# Frontend misc
+/frontend/.DS_Store
+/frontend/.env.local
+/frontend/.env.development.local
+/frontend/.env.test.local
+/frontend/.env.production.local
+/frontend/npm-debug.log*
+/frontend/yarn-debug.log*
+/frontend/yarn-error.log
