--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,9 @@
     "react-router-dom": "6.13.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "bootstrap-icons": "^1.11.3",
+    "axios": "^1.6.8"
   },
   "scripts": {
     "start": "react-scripts start",
