--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,15 +11,16 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
+    "axios": "^1.6.8",
     "bootstrap": "^5.3.8",
+    "bootstrap-icons": "^1.11.3",
     "react": "^19.2.3",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^19.2.3",
     "react-router-dom": "6.13.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4",
-    "bootstrap-icons": "^1.11.3",
-    "axios": "^1.6.8"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
