Add Admin role and log in

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 jwt.secret=${JWT_SECRET}
+admin.email=${ADMIN_EMAIL}
+admin.password=${ADMIN_PASSWORD}
