--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.2.3",
     "react-router-dom": "6.13.0",
+    "@tanstack/react-query": "5.85.5",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
